--- a/Assignment 1 - G24AI2036.ipynb
+++ b/Assignment 1 - G24AI2036.ipynb
@@ -2063,7 +2063,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <td>5</td>\n",
-       "      <td>2025-09-21 10:46:06</td>\n",
+       "      <td>2025-09-22 13:54:22</td>\n",
        "      <td>3</td>\n",
        "      <td>Daffy</td>\n",
        "      <td>7</td>\n",
@@ -2072,7 +2072,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <td>6</td>\n",
-       "      <td>2025-09-21 10:46:06</td>\n",
+       "      <td>2025-09-22 13:54:22</td>\n",
        "      <td>3</td>\n",
        "      <td>Daffy</td>\n",
        "      <td>8</td>\n",
@@ -2081,7 +2081,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3</td>\n",
-       "      <td>2025-09-21 10:46:06</td>\n",
+       "      <td>2025-09-22 13:54:22</td>\n",
        "      <td>1</td>\n",
        "      <td>Mickey</td>\n",
        "      <td>7</td>\n",
@@ -2090,7 +2090,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <td>4</td>\n",
-       "      <td>2025-09-21 10:46:06</td>\n",
+       "      <td>2025-09-22 13:54:22</td>\n",
        "      <td>1</td>\n",
        "      <td>Mickey</td>\n",
        "      <td>8</td>\n",
@@ -2099,7 +2099,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
-       "      <td>2025-09-21 10:46:06</td>\n",
+       "      <td>2025-09-22 13:54:22</td>\n",
        "      <td>2</td>\n",
        "      <td>Minnie</td>\n",
        "      <td>1</td>\n",
@@ -2108,7 +2108,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
-       "      <td>2025-09-21 10:46:06</td>\n",
+       "      <td>2025-09-22 13:54:22</td>\n",
        "      <td>2</td>\n",
        "      <td>Minnie</td>\n",
        "      <td>6</td>\n",
@@ -2280,7 +2280,7 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "f2f4f307-dfcd-4734-919a-d0d06eae023c",
+     "nuid": "e3788b0b-91c4-4fff-bdf6-095f0e66bc88",
      "showTitle": true,
      "tableResultSettingsMap": {},
      "title": "Q5: Compare the differences between static and time-based methods"
@@ -2291,7 +2291,7 @@
      "output_type": "display_data",
      "data": {
       "text/html": [
-       "<b><font color=Green>Comparison: Static vs Time-based Recommendations for Minnie</font></b><table border=\"1\" class=\"dataframe\">\n",
+       "<b><font color=Green>Corrected Comparison: Static vs Time-based for Minnie</font></b><table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th>method</th>\n",
@@ -2313,6 +2313,18 @@
        "      <td>Yesterday</td>\n",
        "      <td>Beatles</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Time-based</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Evermore</td>\n",
+       "      <td>Taylor Swift</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Time-based</td>\n",
+       "      <td>6</td>\n",
+       "      <td>Yesterday</td>\n",
+       "      <td>Beatles</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>"
       ],
@@ -2325,32 +2337,46 @@
     }
    ],
    "source": [
+    "\n",
     "qry_comparison = \"\"\"\n",
-    "-- Static method recommendations for Minnie\n",
-    "WITH static_recs AS (\n",
-    "    SELECT 'Static' as method, s.song_id, s.title, s.artist\n",
-    "    FROM Recommendations r\n",
-    "    JOIN Songs s ON r.song_id = s.song_id\n",
-    "    JOIN Users u ON r.user_id = u.user_id\n",
-    "    WHERE u.name = 'Minnie' \n",
-    "    AND r.recommendation_time < datetime('now', '-1 minute') -- assuming static were created earlier\n",
+    "-- Create temporary static recommendations for comparison\n",
+    "WITH static_recommendations AS (\n",
+    "    WITH song_similarity AS (\n",
+    "        SELECT u1.song_id as song1, u2.song_id as song2, COUNT(*) AS common_users\n",
+    "        FROM LISTENS u1\n",
+    "        JOIN LISTENS u2 ON u1.user_id = u2.user_id AND u1.song_id != u2.song_id\n",
+    "        GROUP BY u1.song_id, u2.song_id\n",
+    "        HAVING COUNT(*) > 0\n",
+    "    ),\n",
+    "    static_recs AS (\n",
+    "        SELECT DISTINCT L.user_id, song_similarity.song2 as song_id, 'Static' as method\n",
+    "        FROM song_similarity\n",
+    "        JOIN Listens as L ON L.song_id = song_similarity.song1\n",
+    "        WHERE song_similarity.song2 NOT IN (\n",
+    "            SELECT song_id FROM Listens as temp WHERE temp.user_id = L.user_id\n",
+    "        )\n",
+    "    )\n",
+    "    SELECT sr.user_id, sr.song_id, sr.method, s.title, s.artist\n",
+    "    FROM static_recs sr\n",
+    "    JOIN Songs s ON sr.song_id = s.song_id\n",
+    "    WHERE sr.user_id = 2  -- Minnie's user_id\n",
     "),\n",
-    "time_recs AS (\n",
-    "    SELECT 'Time-based' as method, s.song_id, s.title, s.artist\n",
+    "\n",
+    "time_based_recommendations AS (\n",
+    "    SELECT r.user_id, r.song_id, 'Time-based' as method, s.title, s.artist\n",
     "    FROM Recommendations r\n",
     "    JOIN Songs s ON r.song_id = s.song_id\n",
-    "    JOIN Users u ON r.user_id = u.user_id\n",
-    "    WHERE u.name = 'Minnie' \n",
-    "    AND r.recommendation_time >= datetime('now', '-1 minute')\n",
+    "    WHERE r.user_id = 2  -- Minnie's user_id\n",
     ")\n",
     "\n",
-    "SELECT * FROM static_recs\n",
+    "-- Combine both methods\n",
+    "SELECT method, song_id, title, artist FROM static_recommendations\n",
     "UNION ALL\n",
-    "SELECT * FROM time_recs\n",
+    "SELECT method, song_id, title, artist FROM time_based_recommendations\n",
     "ORDER BY method, title;\n",
     "\"\"\"\n",
     "\n",
-    "runSql('Comparison: Static vs Time-based Recommendations for Minnie', qry_comparison)"
+    "runSql(\"Corrected Comparison: Static vs Time-based for Minnie\", qry_comparison)"
    ]
   },
   {
